fix current box due to post and get request also applied alarm alert. Also fix overflow problem posted by client tweeter

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -78,7 +78,13 @@ body {
 
 .client-text{
   padding-bottom: 2px;
-  margin-left: 50px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: bold;
+  color: white;
+  overflow-wrap: break-word;
+
 }
 
 .client-text article{
@@ -102,7 +108,9 @@ img.man-icon{
   width: 50px;
   height: 50px;
   margin-left: 40px;
-  margin-top: 10px
+  margin-top: 10px;
+  background-color: white;
+  
 }
 
 span.icon-name{
